update repository names and app store postgres hostname

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NSM_CLAIMS_DEV_URL=http://nsm-crm7-claim:3000
-NSM_ASSESS_DEV_URL=http://172.20.1.2:3000
+NSCC_PROVIDER_URL=http://nsm-crm7-claim:3000
+NSCC_CASEWORKER_URL=http://172.20.1.2:3000
