--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,33 +15,33 @@ jobs:
       - checkout
       - setup_remote_docker
 
-      # Pull nsm claim image
+      # Pull nscc provider image
       - aws-cli/setup:
           role_arn: $CLAIM_ECR_ROLE_TO_ASSUME # this will use the env var
           region: $ECR_REGION
       - run:
-          name: Pull NSM claim image
+          name: Pull NSCC provider image
           command: |
-            echo "Pulling nsm-crm7-claim image"
-            ./.circleci/pull_image nsm-crm7-claim
-      # Pull nsm assess image
+            echo "Pulling NSCC provider image"
+            ./.circleci/pull_image nscc-provider
+      # Pull nscc caseworker image
       - aws-cli/setup:
           role_arn: $ASSESS_ECR_ROLE_TO_ASSUME
           region: $ECR_REGION
       - run:
-          name: Pull NSM assess image
+          name: Pull NSCC caseworker image
           command: |
-            echo "Pulling nsm-crm7-assess image"
-            ./.circleci/pull_image nsm-crm7-assess
-      # Pull nsm appstore image
+            echo "Pulling NSCC caseworker image"
+            ./.circleci/pull_image nscc-caseworker
+      # Pull nscc appstore image
       - aws-cli/setup:
           role_arn: $APPSTORE_ECR_ROLE_TO_ASSUME
           region: $ECR_REGION
       - run:
-          name: Pull NSM appstore image
+          name: Pull NSCC appstore image
           command: |
-            echo "Pulling nsm-crm7-appstore image"
-            ./.circleci/pull_image nsm-crm7-appstore
+            echo "Pulling NSCC-appstore image"
+            ./.circleci/pull_image nscc-appstore
 
       # Add other images (i.e. assess, appstore and claim) to pull
       - run:
