--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
     container_name: laa-crime-forms-end-to-end-tests
     build: .
     environment:
-      - NSCC_CASEWORKER_URL=http://nscc-caseworker:3000
-      - NSCC_PROVIDER_URL=http://nscc-provider:3000
+      - NSCC_CASEWORKER_URL=${NSCC_CASEWORKER_URL}
+      - NSCC_PROVIDER_URL=${NSCC_PROVIDER_URL}
     volumes:
       - .:/e2e
       - ./data:/data
