--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,12 @@
 # This configuration allows for a full-stack application to be run and tested in an isolated environment with consistent IP addresses for inter-service communication.
 
 version: "3.9"
-networks:
-  app_net:
-    ipam:
-      config:
-        - subnet: 172.20.0.0/16
+
 services:
   start_applications:
     container_name: start_applications
     image: jwilder/dockerize
     command: >
-      -wait tcp://nscc-db-services:5432
       -wait tcp://nscc-provider:3000
       -wait tcp://nscc-caseworker:3000
       -wait tcp://nscc-appstore:8000
@@ -34,34 +29,32 @@ services:
     build: .
     environment:
       - NSCC_CASEWORKER_URL=${NSCC_CASEWORKER_URL:-http://nscc-caseworker:3000}
-      - NSCC_PROVIDER_URL=${NSCC_PROVIDER_URL:-nscc-provider:3000}
+      - NSCC_PROVIDER_URL=${NSCC_PROVIDER_URL:-http://nscc-provider:3000}
     volumes:
       - .:/e2e
       - ./data:/data
-    depends_on:
-      - nscc-db-services
-      - nscc-provider
-      - nscc-caseworker
-      - nscc-appstore
-    networks:
-      - app_net
+
 
   # NSCC DATABASE services
 
   nscc-db-services:
     container_name: nscc-db-services
-    image: postgres:bullseye
+    image: postgis/postgis:16-3.4-alpine
     volumes:
       - ./tmp/pgdata:/var/lib/data
       - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready", "-d", "db_prod" ]
+      interval: 10s
+      timeout: 30s
+      retries: 3
+      start_period: 40s
     ports:
       - 5432:5432
-    networks:
-      app_net:
-        ipv4_address: 172.20.1.10
+
 
   # NSCC PROVIDER service
   nscc-provider:
@@ -80,12 +73,11 @@ services:
       - LAA_PORTAL_IDP_METADATA_FILE=config/laa_portal/metadata/samlmock.xml
       - OMNIAUTH_TEST_MODE=true
     depends_on:
-      - nscc-db-services
+      nscc-db-services:
+        condition: service_healthy
     command: |
       bin/rails db:prepare
-    networks:
-      app_net:
-        ipv4_address: 172.20.1.1
+
 
   # NSCC CASEWORKER service
 
@@ -109,12 +101,10 @@ services:
       - APP_STORE_URL=http://nscc-appstore:8000
       - DEV_AUTH_ENABLED=true
     depends_on:
-      - nscc-db-services
+      nscc-db-services:
+        condition: service_healthy
     command: |
       bin/rails db:prepare
-    networks:
-      app_net:
-        ipv4_address: 172.20.1.2
 
   # NSCC Application Store service
 
@@ -128,9 +118,7 @@ services:
       - POSTGRES_HOSTNAME=nscc-db-services
       - POSTGRES_NAME=laa_crime_application_store
     depends_on:
-      - nscc-db-services
+      nscc-db-services:
+        condition: service_healthy
     ports:
       - 8000:8000
-    networks:
-      app_net:
-        ipv4_address: 172.20.1.3
