--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - nscc-provider
       - nscc-caseworker
       - nscc-appstore
+      - laa-crime-forms-end-to-end-tests
 
   laa-crime-forms-end-to-end-tests:
     container_name: laa-crime-forms-end-to-end-tests
