--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,12 @@ jobs:
             cd /home/circleci/project
             docker-compose build
             docker-compose run start_applications
-
+            docker-compose up --build laa-crime-forms-end-to-end-tests
+      - run:
+          name: "Failure: output container logs to console"
+          command: |
+            docker-compose logs
+          when: on_fail
       - run:
           name: Run end to end tests
           command: |
