--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,16 +42,16 @@ services:
     image: postgis/postgis:16-3.4
     volumes:
       - ./tmp/pgdata:/var/lib/data
-      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
+#      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready", "-d", "db_prod" ]
-      interval: 5s
-      timeout: 40s
+      test: [ "CMD-SHELL", "pg_isready"]
+      interval: 10s
+      timeout: 5s
       retries: 5
-      start_period: 60s
+      start_period: 30s
     ports:
       - 5432:5432
 
