--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,13 +39,14 @@ services:
 
   nscc-db-services:
     container_name: nscc-db-services
-    image: postgis/postgis:16-3.4
+    image: postgis/postgis:16-3.4-alpine
     volumes:
       - ./tmp/pgdata:/var/lib/data
 #      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: laa_crime_application_store
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready"]
       interval: 10s
