--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,6 @@ services:
     image: postgis/postgis:16-3.4-alpine
     volumes:
       - ./tmp/pgdata:/var/lib/data
-#      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -66,6 +65,7 @@ services:
     environment:
       - SECRET_KEY_BASE=needed_for_assets_precompile
       - RAILS_ENV=development
+      - RAILS_DEVELOPMENT_HOSTS=nscc-provider
       - ENV=development
       - APP_STORE_URL=http://nscc-appstore:8000
       - SIDEKIQ_WEB_UI_USERNAME=sidekiq
@@ -73,6 +73,8 @@ services:
       - DATABASE_URL=postgresql://postgres:postgres@nscc-db-services:5432/laa_claim_non_standard_magistrate_fee_dev
       - LAA_PORTAL_IDP_METADATA_FILE=config/laa_portal/metadata/samlmock.xml
       - OMNIAUTH_TEST_MODE=true
+      - MAX_UPLOAD_SIZE_BYTES=10485760
+      - GOVUK_NOTIFY_API_KEY=12345
     depends_on:
       nscc-db-services:
         condition: service_healthy
@@ -90,6 +92,7 @@ services:
     environment:
       - SECRET_KEY_BASE=needed_for_assets_precompile
       - RAILS_ENV=development
+      - RAILS_DEVELOPMENT_HOSTS=nscc-caseworker
       - ENV=development
       - SIDEKIQ_WEB_UI_USERNAME=sidekiq
       - SIDEKIQ_WEB_UI_PASSWORD=sidekiq
@@ -101,6 +104,7 @@ services:
       - OMNIAUTH_AZURE_TENANT_ID=''
       - APP_STORE_URL=http://nscc-appstore:8000
       - DEV_AUTH_ENABLED=true
+      - GOVUK_NOTIFY_API_KEY=12345
     depends_on:
       nscc-db-services:
         condition: service_healthy
