--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - nscc-provider
       - nscc-caseworker
       - nscc-appstore
+      - nscc-redis
 
   laa-crime-forms-end-to-end-tests:
     container_name: laa-crime-forms-end-to-end-tests
@@ -55,6 +56,14 @@ services:
     ports:
       - 5432:5432
 
+ #nscc redis service
+  nscc-redis:
+    container_name: nscc-redis
+    image: 'redis:7.2.4-alpine3.19'
+    command: redis-server
+    ports:
+      - '6379:6379'
+
 
   # NSCC PROVIDER service
   nscc-provider:
@@ -66,8 +75,11 @@ services:
       - SECRET_KEY_BASE=needed_for_assets_precompile
       - RAILS_ENV=development
       - RAILS_DEVELOPMENT_HOSTS=nscc-provider
+      - RAILS_LOG_TO_STDOUT=true
       - ENV=development
       - APP_STORE_URL=http://nscc-appstore:8000
+      - REDIS_URL=redis://nscc-redis:6379/1
+      - REDIS_PASSWORD=redis
       - SIDEKIQ_WEB_UI_USERNAME=sidekiq
       - SIDEKIQ_WEB_UI_PASSWORD=sidekiq
       - DATABASE_URL=postgresql://postgres:postgres@nscc-db-services:5432/laa_claim_non_standard_magistrate_fee_dev
@@ -76,8 +88,10 @@ services:
       - MAX_UPLOAD_SIZE_BYTES=10485760
       - GOVUK_NOTIFY_API_KEY=12345
     depends_on:
+      nscc-redis:
+        condition: service_started
       nscc-db-services:
-        condition: service_healthy
+          condition: service_healthy
     command: |
       bin/rails db:prepare
 
@@ -94,6 +108,9 @@ services:
       - RAILS_ENV=development
       - RAILS_DEVELOPMENT_HOSTS=nscc-caseworker
       - ENV=development
+      - REDIS_URL=redis://nscc-redis:6379/2
+      - REDIS_PASSWORD=redis
+      - RAILS_LOG_TO_STDOUT=true
       - SIDEKIQ_WEB_UI_USERNAME=sidekiq
       - SIDEKIQ_WEB_UI_PASSWORD=sidekiq
       - DATABASE_URL=postgresql://postgres:postgres@nscc-db-services:5432/laa_assess_non_standard_magistrate_fee_dev
@@ -106,6 +123,8 @@ services:
       - DEV_AUTH_ENABLED=true
       - GOVUK_NOTIFY_API_KEY=12345
     depends_on:
+      nscc-redis:
+        condition: service_started
       nscc-db-services:
         condition: service_healthy
     command: |
