--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# NSCC_PROVIDER_URL=http://localhost:3001
-# NSCC_CASEWORKER_URL=http://localhost:3002
-NSCC_PROVIDER_URL=http://172.20.1.1:3000
-NSCC_CASEWORKER_URL=http://172.20.1.2:3000
+NSCC_PROVIDER_URL=http://localhost:3001
+NSCC_CASEWORKER_URL=http://localhost:3002
+# NSCC_PROVIDER_URL=http://172.20.1.1:3000
+# NSCC_CASEWORKER_URL=http://172.20.1.2:3000
