--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "e2e-test-record:provider": "playwright codegen https://crm7dev.apps.live.cloud-platform.service.justice.gov.uk/"
   },
   "dependencies": {
+    "@axe-core/playwright": "^4.8.5",
     "@playwright/test": "^1.41.1",
     "@types/node": "^20.10.7",
     "dotenv": "^16.3.1"
