--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -11,5 +11,4 @@ services:
   nscc-caseworker:
     build: https://github.com/ministryofjustice/laa-assess-crime-forms.git#main
   nscc-appstore:
-    # build: https://github.com/ministryofjustice/laa-crime-application-store.git#main
-    build: https://github.com/ministryofjustice/laa-crime-application-store.git#CRM457-919-fix-m1-build-error
+    build: https://github.com/ministryofjustice/laa-crime-application-store.git#main
