--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,9 +74,9 @@ services:
     environment: &providerenvironment
       SECRET_KEY_BASE: needed_for_assets_precompile
       RAILS_ENV: test
+      ENV: localhost
       RAILS_DEVELOPMENT_HOSTS: nscc-provider
       RAILS_LOG_TO_STDOUT: true
-      ENV: test
       APP_STORE_URL: http://nscc-appstore:8000
       REDIS_URL: redis://nscc-redis:6379/1
       REDIS_PASSWORD: redis
@@ -113,9 +113,9 @@ services:
     environment: &caseworkerenvironment
       SECRET_KEY_BASE: needed_for_assets_precompile
       RAILS_ENV: test
+      ENV: localhost
       RAILS_DEVELOPMENT_HOSTS: nscc-caseworker
-      ENV: test
-      REDIS_URL: redis://nscc-redis:6379/2
+      REDIS_URL: redis://nscc-redis:6379/1
       REDIS_PASSWORD: redis
       RAILS_LOG_TO_STDOUT: true
       SIDEKIQ_WEB_UI_USERNAME: sidekiq
