--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -2,16 +2,21 @@ version: "3.4"
 
 services:
   laa-crime-forms-end-to-end-tests:
-    volumes:
-      - .:/e2e
     stdin_open: true # docker run -i
     tty: true # docker run -t
+
   nscc-provider:
     platform: ${LOCAL_PLATFORM}
     build: https://github.com/ministryofjustice/laa-submit-crime-forms.git#main
+    volumes:
+      - ./tmp/logs/provider:/usr/src/app/log
+
   nscc-caseworker:
     platform: ${LOCAL_PLATFORM}
     build: https://github.com/ministryofjustice/laa-assess-crime-forms.git#main
+    volumes:
+      - ./tmp/logs/caseworker:/usr/src/app/log
+
   nscc-appstore:
     platform: ${LOCAL_PLATFORM}
     build: https://github.com/ministryofjustice/laa-crime-application-store.git#main
