--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,10 +73,10 @@ services:
       - 3001:3000
     environment: &providerenvironment
       SECRET_KEY_BASE: needed_for_assets_precompile
-      RAILS_ENV: test
+      RAILS_ENV: development
       ENV: localhost
       RAILS_DEVELOPMENT_HOSTS: nscc-provider
-      RAILS_LOG_TO_STDOUT: true
+      RAILS_LOG_TO_STDOUT: enabled
       APP_STORE_URL: http://nscc-appstore:8000
       REDIS_URL: redis://nscc-redis:6379/1
       REDIS_PASSWORD: redis
@@ -112,12 +112,12 @@ services:
       - 3002:3000
     environment: &caseworkerenvironment
       SECRET_KEY_BASE: needed_for_assets_precompile
-      RAILS_ENV: test
+      RAILS_ENV: development
       ENV: local
       RAILS_DEVELOPMENT_HOSTS: nscc-caseworker
       REDIS_URL: redis://nscc-redis:6379/2
       REDIS_PASSWORD: redis
-      RAILS_LOG_TO_STDOUT: true
+      RAILS_LOG_TO_STDOUT: enabled
       SIDEKIQ_WEB_UI_USERNAME: sidekiq
       SIDEKIQ_WEB_UI_PASSWORD: sidekiq
       DATABASE_URL: postgresql://postgres:postgres@nscc-db-services:5432/laa_assess_non_standard_magistrate_fee_dev
