--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - NSCC_CASEWORKER_URL=${NSCC_CASEWORKER_URL:-http://nscc-caseworker:3000}
       - NSCC_PROVIDER_URL=${NSCC_PROVIDER_URL:-http://nscc-provider:3000}
     volumes:
-      - .:/e2e
+      - .:/e2e_source
       - ./data:/data
 
   # NSCC DATABASE services
@@ -69,11 +69,13 @@ services:
   nscc-provider: &provider
     container_name: nscc-provider
     image: ${NSCC_PROVIDER_IMAGE:-754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-crime-forms-team/laa-submit-crime-forms-dev-ecr:latest}
+    volumes:
+      - ./tmp/logs/provider:/usr/src/app/log
     ports:
       - 3001:3000
     environment: &providerenvironment
       SECRET_KEY_BASE: needed_for_assets_precompile
-      RAILS_ENV: development
+      RAILS_ENV: test
       ENV: localhost
       RAILS_DEVELOPMENT_HOSTS: nscc-provider
       RAILS_LOG_TO_STDOUT: enabled
@@ -108,6 +110,8 @@ services:
   nscc-caseworker: &caseworker
     container_name: nscc-caseworker
     image: ${NSCC_CASEWORKER_IMAGE:-754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-crime-forms-team/laa-assess-crime-forms-dev:latest}
+    volumes:
+      - ./tmp/logs/caseworker:/usr/src/app/log
     ports:
       - 3002:3000
     environment: &caseworkerenvironment
