--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,6 +93,7 @@ services:
       DATABASE_URL: postgresql://postgres:postgres@nscc-db-services:5432/laa_claim_non_standard_magistrate_fee_dev
       LAA_PORTAL_IDP_METADATA_FILE: config/laa_portal/metadata/samlmock.xml
       OMNIAUTH_TEST_MODE: true
+      POSTAL_EVIDENCE: false
       MAX_UPLOAD_SIZE_BYTES: 10485760
       GOVUK_NOTIFY_API_KEY: 12345
       RUN_SIDEKIQ_IN_TEST_MODE: true
