--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,13 @@ version: 2.1
 # ORBS
 # ------------------
 orbs:
-  aws-cli: circleci/aws-cli@4.1.2
-  aws-ecr: circleci/aws-ecr@8.2.1
+  aws-cli: circleci/aws-cli@4.1.3
+  aws-ecr: circleci/aws-ecr@9.0.4
+  orb-tools: circleci/orb-tools@10.1.0
 
+# ------------------
+# JOBS
+# ------------------
 jobs:
   run-e2e-tests:
     docker:
@@ -21,7 +25,6 @@ jobs:
       - run:
           name: Pull NSCC provider image
           command: |
-            echo "Pulling NSCC provider image"
             ./.circleci/pull_image nscc-provider
 
       - aws-cli/setup:
@@ -30,7 +33,6 @@ jobs:
       - run:
           name: Pull NSCC appstore image
           command: |
-            echo "Pulling NSCC-appstore image"
             ./.circleci/pull_image nscc-appstore
 
       - aws-cli/setup:
@@ -39,7 +41,6 @@ jobs:
       - run:
           name: Pull NSCC caseworker image
           command: |
-            echo "Pulling NSCC caseworker image"
             ./.circleci/pull_image nscc-caseworker
 
       - run:
@@ -57,8 +58,37 @@ jobs:
           command: |
             docker-compose run laa-crime-forms-end-to-end-tests
 
+# ------------------
+# WORKFLOWS
+# ------------------
 workflows:
-  build:
+  test:
     jobs:
       - run-e2e-tests:
           context: nsm-e2e-test-production
+
+  publish-orb:
+    jobs:
+      # version 10.1.0 compatible only
+      - orb-tools/publish-dev:
+          name: publish_dev_orb
+          attach-workspace: false
+          checkout: true
+          orb-name: ministryofjustice/crime-forms-end-to-end-tests
+          orb-path: orb.yml
+          context:
+            - laa-crime-forms-orb-publishing
+
+      - orb-tools/increment:
+          name: publish_production_orb
+          segment: patch
+          orb-ref: ministryofjustice/crime-forms-end-to-end-tests
+          orb-path: orb.yml
+          requires:
+            - publish_dev_orb
+          context:
+            - laa-crime-forms-orb-publishing
+          # filters:
+          #   branches:
+          #     only:
+          #       - main
