Fix and refactor local test runs for Apple Silicon
Was getting a repeated architecture error while
attempt to build or running the tests:

```sh
Your bundle only supports platforms ["arm64-darwin-23", "x86_64-darwin-20",
"x86_64-darwin-21", "x86_64-darwin-23", "x86_64-linux"] but your local platform
is aarch64-linux-musl. Add the current platform to the lockfile with
`bundle lock --add-platform aarch64-linux-musl` and try again.
```

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -8,17 +8,20 @@ services:
   nscc-provider:
     platform: ${LOCAL_PLATFORM}
     build: https://github.com/ministryofjustice/laa-submit-crime-forms.git#main
+    pull_policy: always
     volumes:
       - ./tmp/logs/provider:/usr/src/app/log
 
   nscc-caseworker:
     platform: ${LOCAL_PLATFORM}
     build: https://github.com/ministryofjustice/laa-assess-crime-forms.git#main
+    pull_policy: always
     volumes:
       - ./tmp/logs/caseworker:/usr/src/app/log
 
   nscc-appstore:
     platform: ${LOCAL_PLATFORM}
     build: https://github.com/ministryofjustice/laa-crime-application-store.git#main
+    pull_policy: always
     volumes:
       - ./tmp/logs/appstore:/usr/src/app/log
