--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,31 +5,27 @@
 
 version: 2
 updates:
-  - package-ecosystem: "bundler"
-    directory: "/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "terraform"
-    directory: "/terraform"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "daily"
-  - package-ecosystem: "pip"
-    directory: "/"
-    schedule:
-      interval: "daily"
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
-      interval: "daily"
-  - package-ecosystem: "gomod"
-    directory: "/"
-    schedule:
-      interval: "daily"
+      interval: weekly
+      day: wednesday
+      time: "03:00"
+      timezone: Europe/London
+    groups:
+      npm:
+        patterns:
+          - "*"
+    open-pull-requests-limit: 10
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: weekly
+      day: wednesday
+      time: "03:00"
+      timezone: Europe/London
+    groups:
+      npm:
+        patterns:
+          - "*"
+    open-pull-requests-limit: 10
