--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,7 +92,8 @@ services:
       LAA_PORTAL_IDP_METADATA_FILE: config/laa_portal/metadata/samlmock.xml
       OMNIAUTH_TEST_MODE: true
       POSTAL_EVIDENCE: false
-      MAX_UPLOAD_SIZE_BYTES: 10485760
+      PA_MAX_UPLOAD_SIZE_BYTES: 10485760
+      NSM_MAX_UPLOAD_SIZE_BYTES: 26214400
       GOVUK_NOTIFY_API_KEY: 12345
       RUN_SIDEKIQ_IN_TEST_MODE: true
     depends_on:
