--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -5,7 +5,7 @@ services:
 
   nscc-provider:
     platform: ${LOCAL_PLATFORM}
-    build: https://github.com/ministryofjustice/laa-submit-crime-forms.git#crm457-2388-incomplete
+    build: https://github.com/ministryofjustice/laa-submit-crime-forms.git#main
     pull_policy: always
     volumes:
       - ./tmp/logs/provider:/usr/src/app/log
