--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -9,16 +9,8 @@ on:
 jobs:
   run-e2e-tests:
     name: Run E2E Tests
-    runs-on: ubuntu-latest
+    uses: ministryofjustice/nsm-e2e-test/.github/workflows/run-e2e-tests.yml@feature/CRM457-1781-migrate-pipeline-to-github-actions
+    secrets: inherit
     permissions:
       id-token: write
       contents: read
-    
-    env:
-      PROVIDER_ECR_ROLE_TO_ASSUME: ${{ secrets.SUBMIT_DEV_ECR_ROLE_TO_ASSUME }}
-      APPSTORE_ECR_ROLE_TO_ASSUME: ${{ secrets.APP_STORE_DEV_ECR_ROLE_TO_ASSUME }}
-      CASEWORKER_ECR_ROLE_TO_ASSUME: ${{ secrets.ASSESS_DEV_ECR_ROLE_TO_ASSUME }}
-
-    steps:
-      - name: Run E2E Tests
-        uses: ministryofjustice/nsm-e2e-test/.github/actions/run-e2e-tests@feature/CRM457-1781-migrate-pipeline-to-github-actions
