--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -21,27 +21,9 @@ jobs:
       # This is required to get around a bug in the terraform module
       - name: Extract base registry URL and set repository URLs
         shell: bash
-        run: |
-          # Extract the base registry URL (everything before the last '/')
-          BASE_URL=$(echo ${{ secrets.ECR_REGISTRY_URL }} | rev | cut -d/ -f2- | rev)
-          SUBMIT_IMAGE_URL=${BASE_URL}/${SUBMIT_DEV_ECR_REPOSITORY}:latest
-          ASSESS_IMAGE_URL=${BASE_URL}/${ASSESS_DEV_ECR_REPOSITORY}:latest
-          APPSTORE_IMAGE_URL=${BASE_URL}/${APP_STORE_DEV_ECR_REPOSITORY}:latest
-
-          # Mask all the secrets/variables we use so they don't show up in logs
-          # echo "::add-mask::$SUBMIT_IMAGE_URL"
-          echo "::add-mask::$ASSESS_IMAGE_URL"
-          echo "::add-mask::$APPSTORE_IMAGE_URL"
-          echo "::add-mask::${{ vars.SUBMIT_DEV_ECR_REPOSITORY }}"
-          echo "::add-mask::${{ vars.ASSESS_DEV_ECR_REPOSITORY }}"
-          echo "::add-mask::${{ vars.APP_STORE_DEV_ECR_REPOSITORY }}"
-          echo "::add-mask::${{ vars.SUBMIT_DEV_ECR_REGION }}"
-          echo "::add-mask::${{ vars.ECR_ROLE_SESSION_NAME }}"
+        working-directory: e2e-tests
+        run: .github/workflows/setup-env
           
-          echo "SUBMIT_IMAGE_URL=$SUBMIT_IMAGE_URL" >> $GITHUB_ENV
-          echo "ASSESS_IMAGE_URL=$ASSESS_IMAGE_URL" >> $GITHUB_ENV
-          echo "APPSTORE_IMAGE_URL=$APPSTORE_IMAGE_URL" >> $GITHUB_ENV
-
       # laa-submit-crime-forms
       - name: Configure AWS credentials for laa-submit-crime-forms
         uses: aws-actions/configure-aws-credentials@v4
