--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -26,16 +26,6 @@ jobs:
           SUBMIT_IMAGE_URL=${{ secrets.ECR_REGISTRY_URL }}/${{ vars.SUBMIT_DEV_ECR_REPOSITORY }}:latest
           ASSESS_IMAGE_URL=${{ secrets.ECR_REGISTRY_URL }}/${{ vars.ASSESS_DEV_ECR_REPOSITORY }}:latest
           APPSTORE_IMAGE_URL=${{ secrets.ECR_REGISTRY_URL }}/${{ vars.APP_STORE_DEV_ECR_REPOSITORY }}:latest
-
-          # Mask all the secrets/variables we use so they don't show up in logs
-          echo "::add-mask::$SUBMIT_IMAGE_URL"
-          echo "::add-mask::$ASSESS_IMAGE_URL"
-          echo "::add-mask::$APPSTORE_IMAGE_URL"
-          echo "::add-mask::${{ vars.SUBMIT_DEV_ECR_REPOSITORY }}"
-          echo "::add-mask::${{ vars.ASSESS_DEV_ECR_REPOSITORY }}"
-          echo "::add-mask::${{ vars.APP_STORE_DEV_ECR_REPOSITORY }}"
-          echo "::add-mask::${{ vars.SUBMIT_DEV_ECR_REGION }}"
-          echo "::add-mask::${{ vars.ECR_ROLE_SESSION_NAME }}"
           
           echo "SUBMIT_IMAGE_URL=$SUBMIT_IMAGE_URL" >> $GITHUB_ENV
           echo "ASSESS_IMAGE_URL=$ASSESS_IMAGE_URL" >> $GITHUB_ENV
@@ -48,6 +38,11 @@ jobs:
           role-to-assume: ${{ secrets.SUBMIT_DEV_ECR_ROLE_TO_ASSUME }}
           aws-region: ${{ vars.SUBMIT_DEV_ECR_REGION }}
           role-session-name: ${{ vars.ECR_ROLE_SESSION_NAME }}
+
+      - name: Docker login to ECR
+        uses: aws-actions/amazon-ecr-login@v2
+        with:
+          mask-password: 'true'
 
       - name: Pull laa-submit-crime-forms image
         shell: bash
