--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -22,12 +22,40 @@ on:
 
 
 jobs:
-  run-e2e-tests:
-    name: "Run E2E Tests"
+  pull-images:
+    name: "Pull image for ${{ matrix.service.name }}"
     runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
+    strategy:
+      matrix:
+        service:
+          - name: laa-submit-crime-forms
+            service_key: SUBMIT
+            sha: ${{ inputs.submit-sha }}
+          - name: laa-crime-application-store
+            service_key: APP_STORE
+            sha: ${{ inputs.appstore-sha }}
+          - name: laa-assess-crime-forms
+            service_key: ASSESS
+            sha: ${{ inputs.assess-sha }}
+    steps:
+      - name: Configure AWS credentials for ${{ matrix.service.name }}
+        uses: ministryofjustice/laa-reusable-github-actions/.github/actions/ecr-auth@e5500aa20b13a1406fe8a62b8788181a2ca18926
+        with:
+          ecr_role: ${{ secrets[format('{0}_DEV_ECR_ROLE_TO_ASSUME', matrix.service.service_key)] }}
+          ecr_region: ${{ vars[format('{0}_DEV_ECR_REGION', matrix.service.service_key)] }}
+          role-session-name: ${{ vars.ECR_ROLE_SESSION_NAME }}
+
+      - name: Pull ${{ matrix.service.name }} image
+        shell: bash
+        run: docker pull ${{ secrets.ECR_REGISTRY_URL }}/${{ vars[format('{0}_DEV_ECR_REPOSITORY', matrix.service.service_key)] }}:${{ matrix.service.sha }}
+
+  run-e2e-tests:
+    name: "Run E2E Tests"
+    needs: pull-images
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout E2E Test Repository
         uses: actions/checkout@v3
@@ -39,62 +67,12 @@ jobs:
         shell: bash
         run: sudo apt install docker-compose
 
-      # This is required to get around a bug in the terraform module
-      - name: Extract base registry URL and set repository URLs
-        shell: bash
-        run: |
-          # Extract the base registry URL (everything before the last '/')
-          SUBMIT_IMAGE_URL=${{ secrets.ECR_REGISTRY_URL }}/${{ vars.SUBMIT_DEV_ECR_REPOSITORY }}:${{ inputs.submit-sha }}
-          ASSESS_IMAGE_URL=${{ secrets.ECR_REGISTRY_URL }}/${{ vars.ASSESS_DEV_ECR_REPOSITORY }}:${{ inputs.assess-sha }}
-          APPSTORE_IMAGE_URL=${{ secrets.ECR_REGISTRY_URL }}/${{ vars.APP_STORE_DEV_ECR_REPOSITORY }}:${{ inputs.appstore-sha }}
-
-          echo "SUBMIT_IMAGE_URL=$SUBMIT_IMAGE_URL" >> $GITHUB_ENV
-          echo "ASSESS_IMAGE_URL=$ASSESS_IMAGE_URL" >> $GITHUB_ENV
-          echo "APPSTORE_IMAGE_URL=$APPSTORE_IMAGE_URL" >> $GITHUB_ENV
-
-      # laa-submit-crime-forms
-      - name: Configure AWS credentials for laa-submit-crime-forms
-        uses: ministryofjustice/laa-reusable-github-actions/.github/actions/ecr-auth@e5500aa20b13a1406fe8a62b8788181a2ca18926
-        with:
-          ecr_role: ${{ secrets.SUBMIT_DEV_ECR_ROLE_TO_ASSUME }}
-          ecr_region: ${{ vars.SUBMIT_DEV_ECR_REGION }}
-          role-session-name: ${{ vars.ECR_ROLE_SESSION_NAME }}
-
-      - name: Pull laa-submit-crime-forms image
-        shell: bash
-        working-directory: e2e-tests
-        run: docker pull $SUBMIT_IMAGE_URL
-
-      # laa-crime-application-store
-      - name: Configure AWS credentials for laa-crime-application-store
-        uses: ministryofjustice/laa-reusable-github-actions/.github/actions/ecr-auth@e5500aa20b13a1406fe8a62b8788181a2ca18926
-        with:
-          ecr_role: ${{ secrets.APP_STORE_DEV_ECR_ROLE_TO_ASSUME }}
-          ecr_region: ${{ vars.APP_STORE_DEV_ECR_REGION }}
-          role-session-name: ${{ vars.ECR_ROLE_SESSION_NAME }}
-
-      - name: Pull laa-crime-application-store image
-        shell: bash
-        working-directory: e2e-tests
-        run: docker pull $APPSTORE_IMAGE_URL
-
-      # laa-assess-crime-forms
-      - name: Configure AWS credentials for laa-assess-crime-forms
-        uses: ministryofjustice/laa-reusable-github-actions/.github/actions/ecr-auth@e5500aa20b13a1406fe8a62b8788181a2ca18926
-        with:
-          ecr_role: ${{ secrets.ASSESS_DEV_ECR_ROLE_TO_ASSUME }}
-          ecr_region: ${{ vars.ASSESS_DEV_ECR_REGION }}
-          role-session-name: ${{ vars.ECR_ROLE_SESSION_NAME }}
-
-      - name: Pull NSCC laa-assess-crime-forms image
-        shell: bash
-        working-directory: e2e-tests
-        run: docker pull $ASSESS_IMAGE_URL
-
       - name: Build and check/wait for services
         shell: bash
         working-directory: e2e-tests
-        run: docker-compose run --build start_applications
+        run: |
+          docker-compose build
+          docker-compose run start_applications
 
       - name: Run end-to-end tests
         shell: bash
